--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+	
+	<link rel="apple-touch-icon" sizes="120x120" href="https://fueler.io/images/fueler/main/favicon/apple-touch-icon.png" />
+	<link rel="icon" type="image/png" sizes="32x32"
+		href="https://fueler.io/images/fueler/main//favicon/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="16x16"
+		href="https://fueler.io/images/fueler/main//favicon/favicon-16x16.png" />
+    
+	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+	<meta name="title" content="Vikash Singh | Fueler Partners">
+	<meta name="meta-title" content="Vikash Singh | Fueler Partners">
+	<meta name="description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the work. Fueler is an online platform to showcase work on the internet." lang="en">
+	<meta name="keywords" content="Vikash Singh, Fueler Partner">
+	<meta name="robots" content="index">
+	
+	<meta name="copyright" content="Fueler">
+	<meta name="language" content="English">
+	<meta name="revisit-after" content="5 days">
+	
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@fuelerHQ" />
+	<meta name="twitter:creator" content="@fuelerHQ" />
+	<meta name="twitter:title" content="Vikash Singh | Fueler Partners">
+	<meta name="twitter:description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the work. Fueler is an online platform to showcase work on the internet.">
+	<meta name="twitter:image" content="%PUBLIC_URL%/fueler-partners-meta.png">
+	<meta name="twitter:url" content="https://vikash.fueler.io">
+	
+	<meta property="og:type" content="@yield('og:type')">
+	<meta property="og:title" content="Vikash Singh | Fueler Partners">
+	<meta property="og:description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the work. Fueler is an online platform to showcase work on the internet.">
+	<meta property="og:image" content="%PUBLIC_URL%/fueler-partners-meta.png">
+	<meta property="og:url" content="https://vikash.fueler.io">
+	<meta property="og:site_name" content="Vikash Singh | Fueler Partners" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    
+	<div id="root"></div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
