page title updated

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+	<title>Vikash Singh | Fueler Partners</title>
 	<meta name="title" content="Vikash Singh | Fueler Partners">
 	<meta name="meta-title" content="Vikash Singh | Fueler Partners">
 	<meta name="description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the work. Fueler is an online platform to showcase work on the internet." lang="en">
