meta details updated

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 	<title>Vikash Singh | Fueler Partners</title>
 	<meta name="title" content="Vikash Singh | Fueler Partners">
 	<meta name="meta-title" content="Vikash Singh | Fueler Partners">
-	<meta name="description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the work. Fueler is an online platform to showcase work on the internet." lang="en">
+	<meta name="description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the world. Fueler is an online platform to showcase work on the internet." lang="en">
 	<meta name="keywords" content="Vikash Singh, Fueler Partner">
 	<meta name="robots" content="index">
 	
@@ -28,13 +28,13 @@
 	<meta name="twitter:site" content="@fuelerHQ" />
 	<meta name="twitter:creator" content="@fuelerHQ" />
 	<meta name="twitter:title" content="Vikash Singh | Fueler Partners">
-	<meta name="twitter:description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the work. Fueler is an online platform to showcase work on the internet.">
+	<meta name="twitter:description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the world. Fueler is an online platform to showcase work on the internet.">
 	<meta name="twitter:image" content="%PUBLIC_URL%/fueler-partners-meta.png">
 	<meta name="twitter:url" content="https://vikash.fueler.io">
 	
 	<meta property="og:type" content="@yield('og:type')">
 	<meta property="og:title" content="Vikash Singh | Fueler Partners">
-	<meta property="og:description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the work. Fueler is an online platform to showcase work on the internet.">
+	<meta property="og:description" content="Join Fueler Partner Program and work with the most demanding skilled individuals around the world. Fueler is an online platform to showcase work on the internet.">
 	<meta property="og:image" content="%PUBLIC_URL%/fueler-partners-meta.png">
 	<meta property="og:url" content="https://vikash.fueler.io">
 	<meta property="og:site_name" content="Vikash Singh | Fueler Partners" />
